--- a/Adv-dealership-Project/pom.xml
+++ b/Adv-dealership-Project/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.pluralsight</groupId>
-    <artifactId>Car-dealership</artifactId>
+    <artifactId>Adv-dealership-Project</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -13,12 +13,5 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.maven.doxia</groupId>
-            <artifactId>doxia-module-twiki</artifactId>
-            <version>1.11.1</version>
-        </dependency>
-    </dependencies>
 
 </project>
